Keep working on the container environment
 Changes to be committed:
	renamed:    Dockerfile -> Dockerfile.development
	renamed:    compose.yaml -> development.yaml
	deleted:    etc/env.list
	new file:   production.yaml
	deleted:    scripts/container/set_timezone.sh
	deleted:    scripts/host/run_container.sh

--- a/development.yaml
+++ b/development.yaml
@@ -8,7 +8,6 @@ services:
     network_mode: host
     ipc: host
     restart: unless-stopped
-    shm_size: '2gb'
     security_opt:
       - seccomp:unconfined
       - apparmor:unconfined    
@@ -16,10 +15,10 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-      shm_size: '1gb'
 
-    env_file:
-      - ./etc/env.list.common      
-    
+    environment:
+      - APP_ROOT_DIR=/app
+      - LOG_FILE=/var/log/wkt2geojson/wkt2geojson.log
+
     volumes:      
       - .:/app
