Keep working on the environment
 Changes to be committed:
	renamed:    Dockerfile.development -> Dockerfile.dev
	new file:   Dockerfile.prod
	modified:   README.md
	renamed:    development.yaml -> compose-dev.yaml
	renamed:    production.yaml -> compose-prod.yaml
	renamed:    docker-entrypoint.sh -> scripts/docker-entrypoint.sh
	renamed:    scripts/container/start_app.csh -> scripts/start_app.sh

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,10 +2,11 @@ FROM debian:latest
 
 RUN apt update -y && export DEBIAN_FRONTEND=noninteractive && apt install -y \
     build-essential \
+    vim \
     flex \
     bison \
     valgrind \
     && rm -Rf /var/lib/apt/lists/*
 
-ENTRYPOINT ["/app/docker-entrypoint.sh"]
-CMD ["/app/scripts/container/start_app.csh"]
+ENTRYPOINT ["/app/scripts/docker-entrypoint.sh"]
+CMD ["/app/scripts/start_app.sh"]
