--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -14,7 +14,7 @@ services:
 
     build: 
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.development
 
     environment:
       - APP_ROOT_DIR=/app
