Import some sample files
 Changes to be committed:
	new file:   app_home/bin/test1
	new file:   app_home/samples/features.drl
	new file:   app_home/samples/features.lc
	new file:   app_home/samples/features.mc
	new file:   app_home/samples/features.ms
	modified:   app_home/transpilers/features/Makefile

--- a/app_home/transpilers/features/Makefile
+++ b/app_home/transpilers/features/Makefile
@@ -114,7 +114,7 @@ test1:
 		--leak-check=full \
 		--show-leak-kinds=all \
 		$(APP_ROOT_DIR)/app_home/bin/test1 \
-		$(APP_ROOT_DIR)/tmp/features.lc \
+		$(APP_ROOT_DIR)/app_home/samples/features.lc \
 		$(APP_ROOT_DIR)/tmp/test1.log \
 		$(APP_ROOT_DIR)/tmp/test1.out
 
