Implement the GeoJSON Writer
 Changes to be committed:
	modified:   application/src/Makefile
	modified:   application/src/wkt2geojson.tab.c
	modified:   application/src/wkt2geojson.tab.h
	modified:   application/src/wkt2geojson.y
	modified:   application/src/wkt_parser
	new file:   application/src/writer.c
	renamed:    application/src/geojson.h -> application/src/writer.h

--- a/application/src/Makefile
+++ b/application/src/Makefile
@@ -96,7 +96,8 @@ test2:
 	flex wkt2geojson.l
 	#bison -d -Wcounterexamples wkt2geojson.y
 	bison -d wkt2geojson.y
-	gcc -o wkt_parser wkt2geojson.tab.c lex.yy.c -lfl
+	gcc -o wkt_parser wkt2geojson.tab.c lex.yy.c writer.c -lfl
+	./wkt_parser < ../samples/wkt/ex4 > ../../tmp/test.json
 
 
 # target: help - Mostra os targets que sao executaveis
