Organize the parser code
Create a main program and use the getopt library

 Changes to be committed:
	modified:   application/src/Makefile
	new file:   application/src/teste.json
	new file:   application/src/wkt2geojson
	modified:   application/src/wkt2geojson.c
	modified:   application/src/wkt2geojson.tab.c
	modified:   application/src/wkt2geojson.tab.h
	modified:   application/src/wkt2geojson.y
	deleted:    application/src/wkt2geojson.y.orig2

--- a/application/src/Makefile
+++ b/application/src/Makefile
@@ -96,8 +96,9 @@ test2:
 	flex wkt2geojson.l
 	#bison -d -Wcounterexamples wkt2geojson.y
 	bison -d wkt2geojson.y
-	gcc -o wkt_parser wkt2geojson.tab.c lex.yy.c writer.c -lfl
-	./wkt_parser < ../samples/wkt/ex4 > ../../tmp/test.json
+	gcc -o wkt2geojson wkt2geojson.c wkt2geojson.tab.c lex.yy.c writer.c -lfl
+	#gcc -o wkt2geojson wkt2geojson.c lex.yy.c writer.c -lfl
+	./wkt2geojson < ../samples/wkt/ex4 > ../../tmp/test.json
 
 
 # target: help - Mostra os targets que sao executaveis
