Create the script run_wkt2geojson
Make easier the execution of the wkt2geojson program

 Changes to be committed:
	modified:   README.md
	new file:   application/bin/wkt2geojson
	deleted:    application/samples/features/features.drl
	deleted:    application/samples/features/features.lc
	deleted:    application/samples/features/features.mc
	deleted:    application/samples/features/features.ms
	modified:   application/src/Makefile
	new file:   scripts/run_wkt2geojson.sh

--- a/application/src/Makefile
+++ b/application/src/Makefile
@@ -76,7 +76,7 @@ compile: lex.yy.c parser.tab.h
 		wkt2geojson.c \
 		parser.tab.c \
 		lex.yy.c \
-		gjs.c
+		writer.c
 	chmod 0755 $(APP_ROOT_DIR)/application/bin/wkt2geojson
 
 
